--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                         <div class="fragment">
                             <li>Consultancy?</li>
                         </div>
+                        <div class="fragment">
+                            <li>Startups?</li>
+                        </div>
                     </ul>
                 </section>
                 <section>
@@ -86,109 +89,190 @@
                     <iframe style="height:640px" src="http://endpoint15.meteor.com" height="100%" width="100%"></iframe>
                 </section>
                 <section>
-                    <h2>How to build an app</h2>
-                    <p>Anyone?</p>
-                </section>
-                <section>
-                    <h3>1. concept</h3>
-                    (bp partup image)
-                </section>
-                <section>
-                    <h3>2. interaction design</h3>
-                    design / interactieontwerp (frankwatching)
-                </section>
-                <section>
-                    <h3>3. technisch advies / architectuur</h3>
-                    technisch advies / architectuur (leefplezier)
-                </section>
-                <section>
-                    <h3>4. Implementatie / SCRUM</h3>
-                    SCRUM / implementatie
-                    planning
-                    git
-                    review
-                </section>
-                <section>
-                    <h3>4. Infrastructure / Deployment </h3>
-                    (ansible script)
-                </section>
-                <section>
-                    <h3>5. Analytics</h3>
-                    Google Analytics
-                    New relic monitoring
-                </section>
-
-                <section>
-                    <h2>How to code?</h2>
+                    <h2>How to create apps</h2>
                     <div class="fragment">
                         <p>Anyone?</p>
                     </div>
                 </section>
                 <section>
-                    <h2>Serverside rendered</h2>
                     <ul>
-                        <div class="fragment">
-                            <li>All logic and data on backend</li>
-                        </div>
-                        <div class="fragment">
-                            <li>Stateless</li>
-                        </div>
-                        <div class="fragment">
-                            <li>HTML, no javascript</li>
-                        </div>
+                        <li>Concept</li>
+                        <li>Interaction design</li>
+                        <li>Architecture</li>
+                        <li>Development (SCRUM)</li>
+                        <li>Deployment</li>
+                        <li>Analytics & Monitoring</li>
                     </ul>
                 </section>
                 <section>
-                    <h3>Serverside rendered</h3>
-                    diagram
+                    <section>
+                        <h3>1. concept</h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-concept-01.png" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-concept-02.png" width="100%"/>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h3>2. interaction design</h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-design-01.png" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-design-02.png" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-design-03.png"/>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h3>3. Architecture</h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-architecture-01.png" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-architecture-02.png" width="100%"/>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h3>4. Development</h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-development-01.jpg" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-development-02.jpg" width="100%"/>
+                    </section>
+                    <section data-background="images/phase-development-03.png"/>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h3>4. Deployment </h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-deployment-01.jpg" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-deployment-02.png" width="100%"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-deployment-03.jpg"/>
+                    </section>
+                </section>
+                <section>
+                    <section>
+                        <h3>5. Analytics & Monitoring</h3>
+                    </section>
+                    <section>
+                        <img src="images/phase-analytics-01.png"/>
+                    </section>
+                    <section>
+                        <img src="images/phase-analytics-02.png"/>
+                    </section>
+                </section>
+
+                <section>
+                    <h2>How to code your app?</h2>
+                    <div class="fragment">
+                        <p>Anyone?</p>
+                    </div>
+                </section>
+
+                <section data-background="images/technologies.png">
+                </section>
+
+                <section>
+                    <ul>
+                        <li>Client</li>
+                        <li>Server</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Serverside rendered</h2>
+                </section>
+                <section>
+                    <img src="images/diagram-serversiderendered.png" width="100%"/>
+                </section>
+                <section>
+                    <h2>Serverside rendered</h2>
+                    <ul>
+                        <div class="fragment">
+                            <li>HTML, no javascript required</li>
+                        </div>
+                        <div class="fragment">
+                            <li>logic and rendering on server</li>
+                        </div>
+                        <div class="fragment">
+                            <li>very cacheable</li>
+                        </div>
+                        <div class="fragment">
+                            <li>page refresh on interaction</li>
+                        </div>
+                    </ul>
                 </section>
                 <section>
                     <h2>example server side rendered code</h2>
                     <p>Lifely blog (symfony2 php)</p>
                 </section>
                 <section>
-                    <h2>RESTful backends</h2>
+                    <h2>Clientside rendering</h2>
+                </section>
+                <section>
+                    <img src="images/diagram-clientsiderendered-v2.png" width="75%"/>
+                </section>
+                <section>
+                    <h2>Clientside rendering</h2>
                     <ul>
                         <div class="fragment">
-                            <li>Defacto standard</li>
+                            <li>"API Endpoints" exposing JSON/XML data</li>
                         </div>
                         <div class="fragment">
-                            <li>Endpoints exposing data</li>
+                            <li>REST is defacto API standard</li>
                         </div>
                         <div class="fragment">
-                            <li>JSON/XML over HTTP</li>
+                            <li>Client decides what to do with data</li>
                         </div>
                     </ul>
                 </section>
                 <section>
-                    <h3>RESTful backends</h3>
-                    diagram
-                </section>
-                <section>
                     <h2>example REST api code</h2>
                     <p>Leefplezier app API (symfony2 php)</p>
+                    <img src="images/phase-design-03.png" width="40%" />
                 </section>
                 <section>
-                    <h2>example REST api code</h2>
-                    <p>Flickr image api query (nodejs)</p>
-                </section>
-                <section>
-                    <h2>Single page applications</h2>
+                    <h2>Single Page Apps</h2>
                     <ul>
                         <div class="fragment">
-                            <li>AJAX / XHR requests</li>
+                            <li>MVC model to render templates</li>
                         </div>
                         <div class="fragment">
                             <li>Consume REST endpoints</li>
                         </div>
                         <div class="fragment">
-                            <li>MVC model to render templates</li>
+                            <li>AJAX / XHR requests</li>
+                        </div>
+                        <div class="fragment">
+                            <li>New framework everyday (react, angular, meteor)</li>
                         </div>
                     </ul>
                 </section>
                 <section>
                     <h2>example SPA code</h2>
-                    <p>Leefplezier app code (angular)</p>
+                    <p>Leefplezier dashboard app code (angular)</p>
+                </section>
+                <section>
+                    <h2>Real-time applications</h2>
+                </section>
+                <section>
+                    <img src="images/diagram-realtime.png" width="100%"/>
                 </section>
                 <section>
                     <h2>Real-time applications</h2>
@@ -199,13 +283,11 @@
                         <div class="fragment">
                             <li>JSON over bi-directional websockets</li>
                         </div>
+                        <div class="fragment">
+                            <li>Real-time updating UI's</li>
+                        </div>
                     </ul>
                 </section>
-                <section>
-                    <h3>Real-time applications</h3>
-                    diagram
-                </section>
-                <section>
                 <section>
                     <h2>example realtime code (meteor js)</h2>
                     <p><img width=300 src="images/endpointcon-map.png"/></p>
