fix(images): reduce size background images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!-- Any section element inside of this container is displayed as a slide -->
             <div class="slides">
-                <section class="pp-title" data-background="images-theme/background-items.png">
+                <section class="pp-title" data-background="images-theme/background-items.jpg">
                     <h1>Webapplications: <br/>from concept to code</h1>
                     <p>
                         <img src="images-theme/peter2.png" alt="">
@@ -53,7 +53,7 @@
                     </svg>
                 </section>
                                <section >
-                    <section class="pp-payoff" data-background="images-theme/background.png">
+                    <section class="pp-payoff" data-background="images-theme/background.jpg">
                     <svg class="pp-title--logo" viewBox="0 0 80 32" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g id="Page-1" stroke="none" stroke-width="1" fill-rule="evenodd">
                             <g id="Artboard">
@@ -71,7 +71,7 @@
                         <video id="partup-screendemo" controls="controls" autoplay name="partup-screendemo" src="videos/partup-screendemo.mov#t=23"></video>
                     </section>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h3>What should we talk about?</h3>
                     <ul>
                         <div class="fragment">
@@ -97,17 +97,17 @@
                         </div>
                     </ul>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <h3><a href="https://endpoint15.herokuapp.com">endpoint15.herokuapp.com</a></h3>
                     <iframe style="height:640px" src="https://endpoint15.herokuapp.com" height="100%" width="100%"></iframe>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>How to create apps</h2>
                     <div class="fragment">
                         <p>Anyone?</p>
                     </div>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <ul>
                         <li>Concept</li>
                         <li>Interaction design</li>
@@ -117,7 +117,7 @@
                         <li>Analytics & Monitoring</li>
                     </ul>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>1. concept</h2>
                     </section>
@@ -128,7 +128,7 @@
                         <img src="images/phase-concept-02.png" width="100%"/>
                     </section>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>2. interaction design</h2>
                     </section>
@@ -142,7 +142,7 @@
                         <img src="images/phase-design-03.png"/>
                     </section>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>3. Architecture</h2>
                     </section>
@@ -153,7 +153,7 @@
                         <img src="images/phase-architecture-02.png" width="100%"/>
                     </section>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>4. Development</h2>
                     </section>
@@ -166,7 +166,7 @@
                     <section data-background="images/phase-development-03.png"/>
                     </section>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>4. Deployment </h2>
                     </section>
@@ -180,7 +180,7 @@
                         <img src="images/phase-deployment-03.jpg"/>
                     </section>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <section>
                         <h2>5. Analytics & Monitoring</h2>
                     </section>
@@ -192,7 +192,7 @@
                     </section>
                 </section>
 
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>How to code your app?</h2>
                     <div class="fragment">
                         <p>Anyone?</p>
@@ -202,19 +202,19 @@
                 <section data-background="images/technologies.png">
                 </section>
 
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <ul>
                         <li>Client</li>
                         <li>Server</li>
                     </ul>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Serverside rendered</h2>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <img src="images/diagram-serversiderendered.png" width="100%"/>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Serverside rendered</h2>
                     <ul>
                         <div class="fragment">
@@ -231,17 +231,17 @@
                         </div>
                     </ul>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>example server side rendered code</h2>
                     <p>Lifely blog (php)</p>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Clientside rendering</h2>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <img src="images/diagram-clientsiderendered-v2.png" width="75%"/>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Clientside rendering</h2>
                     <ul>
                         <div class="fragment">
@@ -255,12 +255,12 @@
                         </div>
                     </ul>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>example REST api code</h2>
                     <p>Leefplezier app API (php)</p>
                     <img src="images/phase-design-03.png" width="40%" />
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Single Page Apps</h2>
                     <ul>
                         <div class="fragment">
@@ -277,17 +277,17 @@
                         </div>
                     </ul>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>example SPA code</h2>
                     <p>Leefplezier dashboard app code (angular)</p>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Real-time applications</h2>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <img src="images/diagram-realtime.png" width="100%"/>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>Real-time applications</h2>
                     <ul>
                         <div class="fragment">
@@ -301,18 +301,18 @@
                         </div>
                     </ul>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>example realtime code (meteor js)</h2>
                     <p><img width=300 src="images/endpointcon-map.png"/></p>
                     <p><a href="https://github.com/peterpeerdeman/ddp-the-real-time-api-for-web-applications/tree/gh-pages/examples/endpointcon-map">endpointcon-map meteor example on github</a></p>
                 </section>
-                <section data-background="images-theme/background-items.png">
+                <section data-background="images-theme/background-items.jpg">
                     <h2>What I ask of you?</h2>
                     <div class='fragment'>
                         <h3>Give webapplications a try!</h3>
                     </div>
                 </section>
-                <section data-background="images-theme/background.png">
+                <section data-background="images-theme/background.jpg">
                     <h3>Gettings started</h3>
                     <ul>
                         <div class='fragment'>
@@ -331,11 +331,11 @@
                         -->
                     </ul>
                 </section>
-                <section class="pp-title" data-background="images-theme/background-items.png">
+                <section class="pp-title" data-background="images-theme/background-items.jpg">
                     <h3>Thank you<br/> for your attention</h3>
                     <a style="font-size:.6em;" href="https://github.com/peterpeerdeman/webapplications-from-concept-to-code">https://github.com/peterpeerdeman/webapplications-from-concept-to-code</a>
                 </section>
-                <section class="pp-title" data-background="images-theme/background-items.png">
+                <section class="pp-title" data-background="images-theme/background-items.jpg">
                     <h1>Webapplications: <br/>from concept to code</h1>
                     <p>
                         <img src="images-theme/peter2.png" alt="">
