copy(presentation): small typo fix

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </div>
                 </section>
                 <section data-background="images-theme/background.jpg">
-                    <h3>Gettings started</h3>
+                    <h3>Getting started</h3>
                     <ul>
                         <div class='fragment'>
                             <li>Server side rendering: <a href="https://laravel.com/">Laravel (php)</a></li>
